nsx-demo-policy.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: nsx-demo-policy
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            app: dv
    port:
      - port: 80
        protocol: TCP
